--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,8 +8,11 @@
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
+    <meta name="google-signin-client_id" content="98149048068-tt2ie4kotqvsotpfsghp8glqij68t5r7.apps.googleusercontent.com">
+    
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -26,5 +29,7 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
+
+
   </body>
 </html>
