added font awesome

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     -->
     <meta name="google-signin-client_id" content="98149048068-tt2ie4kotqvsotpfsghp8glqij68t5r7.apps.googleusercontent.com">
     
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"> 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <script src="https://apis.google.com/js/platform.js" async defer></script>
