added morgans changes

--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
-<!--     <meta name="google-signin-client_id" content="98149048068-tt2ie4kotqvsotpfsghp8glqij68t5r7.apps.googleusercontent.com"> -->
-    
+    <link href="https://fonts.googleapis.com/css?family=Dosis|Indie+Flower|Poiret+One|Quicksand|Raleway|Kavivanar" rel="stylesheet">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"> 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
     <title>Chappy Nest</title>
   </head>
   <body>
